--- a/yes.html
+++ b/yes.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div>
-                <h1 class="header_text">Let&rsquo;s go!</h1>
+                <h1 class="header_text">Today you will have intercourse with snails, they will get into your liver and start a French revolution</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media.tenor.com/YTw87WdiaasAAAAi/tkthao219-capoo.gif">
