--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Will cyn play minecraft with ukai</h1>
+        <h1 class="header_text">Will cyn play minecraft with ukai?</h1>
         <div class="gif_container">
             <img src="https://media.tenor.com/efbi1EpFlVUAAAAi/bugcat-capoo.gif" alt="Cute Capoo GIF">
         </div>
